kubernetes/notifiarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifiarr
  namespace: notifiarr
spec:
  selector:
    app: notifiarr
  ports:
  - port: 5454
    targetPort: 5454
    protocol: TCP
    name: http
  type: ClusterIP
